--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,7 +9,7 @@
         "noUnusedParameters": true,
         "noImplicitReturns": true,
         "noFallthroughCasesInSwitch": true,
-        "removeComments": true,
+        "removeComments": false,
         "resolveJsonModule": true,
         "lib": [
             "esnext",
