--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
         "dist/**/*"
     ],
     "scripts": {
-        "build": "tsc --project tsconfig.json",
+        "clean": "npx -q rimraf dist",
+        "build": "npm run clean && tsc --project tsconfig.json",
         "lint": "npm run lint:src && npm run lint:test",
         "lint:src": "tslint --project tsconfig.json -c tslint.json --format stylish",
         "lint:test": "tslint -c tslint.json src/**/*.spec.ts --format stylish",
