--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
         "clean": "npx -q rimraf dist",
         "build": "npm run clean && tsc --project tsconfig.json",
         "lint": "npm run lint:src && npm run lint:test",
-        "lint:src": "tslint --project tsconfig.json -c tslint.json --format stylish",
-        "lint:test": "tslint -c tslint.json src/**/*.spec.ts --format stylish",
+        "lint:src": "eslint --ext ts --max-warnings 0 --ignore-pattern *.spec.ts src",
+        "lint:test": "eslint --ext ts --plugin jest --env jest/globals src/**/*.spec.ts",
         "pretest": "npm run lint",
         "test": "jest src",
         "posttest": "codecov -f coverage/*.json",
@@ -36,13 +36,21 @@
     "repository": "github:Ionaru/romanize",
     "license": "MIT",
     "devDependencies": {
+        "@ionaru/eslint-config": "^1.0.3",
         "@types/jest": "^25.1.4",
         "@types/node": "^13.9.2",
+        "@typescript-eslint/eslint-plugin": "^2.24.0",
+        "@typescript-eslint/eslint-plugin-tslint": "^2.24.0",
         "codecov": "^3.6.5",
+        "eslint": "^6.8.0",
+        "eslint-plugin-import": "^2.20.1",
+        "eslint-plugin-jest": "^23.8.2",
+        "eslint-plugin-no-null": "^1.0.2",
+        "eslint-plugin-prefer-arrow": "^1.1.7",
+        "eslint-plugin-sonarjs": "^0.5.0",
         "jest": "^25.1.0",
         "ts-jest": "^25.2.1",
         "tslint": "^6.1.0",
-        "tslint-sonarts": "1.9.0",
         "typescript": "^3.8.3"
     },
     "dependencies": {}
