--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,8 @@
         "resolveJsonModule": true,
         "lib": [
             "esnext",
+            "ES2020",
+            "ES2019",
             "es2018",
             "es2017",
             "es2016",
@@ -20,18 +22,14 @@
         ],
         "module": "commonjs",
         "moduleResolution": "node",
-        "outDir": "./dist",
+        "outDir": "dist",
         "sourceMap": true,
         "target": "es6",
         "typeRoots": [
-            "./node_modules/@types"
+            "node_modules/@types"
         ]
     },
-    "exclude": [
-        "./node_modules",
-        "./src/**/*.spec.ts"
-    ],
-    "include": [
-        "./src/**/*.ts"
+    "files": [
+        "src/cli.ts"
     ]
 }
